--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="col-md-6">
             <div class="why_detail-box">
               <h3>
-                Why learn on Fanadesh
+                Why learn on Our Little Gems
               </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
