--- a/about.html
+++ b/about.html
@@ -147,17 +147,17 @@
           <ul>
             <li>
               <a href="">
-                Video games
+                  Admission
               </a>
             </li>
             <li>
-              <a href="">
-                Remote control
-              </a>
+             <a href="">
+                Contact
+             </a>
             </li>
             <li>
               <a href="">
-                3d controller
+                  About
               </a>
             </li>
           </ul>
