--- a/index.html
+++ b/index.html
@@ -84,14 +84,11 @@
       <div class="hero-container container">
         <div class="hero_detail-box">
           <h1>
-            Best way
-            to fund
-            your study
-            abroad
+            A wonderful world<br>
+            for kids to enjoy learning
           </h1>
           <p>
-            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam
+            We need your support in order to grow! we invites you to support the work of transforming education for the future generations. we carry our vision as a cultural initiative and a gift to all humanity
           </p>
           <div class="hero_btn-continer">
             <a href="" class="call_to-btn btn_white-border">
@@ -218,7 +215,7 @@
           <div class="col-md-6">
             <div class="determine_detail-box">
               <h3>
-                Datermine the right for you
+                Determine the right for your child
               </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -270,12 +267,10 @@
                       <div class="col-md-9">
                         <div class="client_detail-box">
                           <h5>
-                            Alex Du
+                            Sajin
                           </h5>
                           <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                            Good atmosphere
                           </p>
                         </div>
                       </div>
@@ -291,12 +286,10 @@
                       <div class="col-md-9">
                         <div class="client_detail-box">
                           <h5>
-                            Alex Du
+                            Sudhev
                           </h5>
                           <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                            Excellent teaching staffs
                           </p>
                         </div>
                       </div>
@@ -312,12 +305,10 @@
                       <div class="col-md-9">
                         <div class="client_detail-box">
                           <h5>
-                            Alex Du
+                            Rahul
                           </h5>
                           <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                            Have the best facilities for kids.
                           </p>
                         </div>
                       </div>
@@ -404,17 +395,17 @@
                 <ul>
                   <li>
                     <a href="">
-                        Video games
+                        Admission
                     </a>
                   </li>
                   <li>
                    <a href="">
-                      Remote control
+                      Contact
                    </a>
                   </li>
                   <li>
                     <a href="">
-                        3d controller
+                        About
                     </a>
                   </li>
                 </ul>
