--- a/why.html
+++ b/why.html
@@ -97,7 +97,7 @@
           <div class="col-md-6">
             <div class="why_detail-box">
               <h3>
-                Why learn on Fanadesh
+                Why learn on Our Little Gems
               </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -145,17 +145,17 @@
           <ul>
             <li>
               <a href="">
-                Video games
+                  Admission
               </a>
             </li>
             <li>
-              <a href="">
-                Remote control
-              </a>
+             <a href="">
+                Contact
+             </a>
             </li>
             <li>
               <a href="">
-                3d controller
+                  About
               </a>
             </li>
           </ul>
