--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
                 Admission open
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                Thank you for your interest in Our Little Gems; we know how important it is to find the best educational fit for your child. We look at each child as an individual and, therefore, there can be no hard-and-fast rules for acceptance.
               </p>
               <div class="">
                 <a href="" class="call_to-btn btn_white-border">
@@ -190,9 +188,11 @@
                 Why learn on Our Little Gems
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                The following are the guiding principles for the working of Our All of us consider these principles as supreme. We try to observe these principles both in letter and in spirit at all times<br><br>
+                Provide highest quality education to students.<br>
+                Give students more than what we promise them.<br>
+                Charge very reasonable fees for all courses - without compromising on the quality of inputs that we give.<br>
+                Act in the best interests of students at all time
               </p>
               <div class="">
                 <a href="" class="call_to-btn btn_white-border">
