--- a/admission.html
+++ b/admission.html
@@ -98,9 +98,7 @@
                 Admission open
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                Thank you for your interest in Our Little Gems; we know how important it is to find the best educational fit for your child. We look at each child as an individual and, therefore, there can be no hard-and-fast rules for acceptance.
               </p>
               <div class="">
                 <a href="" class="call_to-btn btn_white-border">
